--- a/source/chronotrack.html.haml
+++ b/source/chronotrack.html.haml
@@ -16,12 +16,12 @@
 				%h4
 					About the project
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
+					Chronotrack offers industry trusted race timing tools. They offer cutting edge software with live tracking capabilities. Chronotrack was a great project to be part of. They communicate excellence through fun and energetic messaging.
 			.col-md-4.col-sm-4
 				%h4
-					Our role
+					My role
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+					I worked with a local agency to redesign the Chronotrack website. They were seeking a modern design that would help their product shine.  
 %section
 	.container
 		.row
@@ -31,7 +31,7 @@
 					%h2
 						A Blueprint for Success
 					%h3
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+						We built custom graphics for Chronotrack designed to illustrate the company’s utilization of technology to form success.
 			.col-md-2
 		.row
 			.col-md-1
@@ -48,7 +48,7 @@
 					%h2
 						The Next Generation Race Platform
 					%h3
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
+						We created messaging that was confidant and exciting. We wanted users to feel energized and empowered while learning about the company.
 			.col-md-2
 		.row
 			.col-md-2
@@ -64,7 +64,7 @@
 					%h2
 						Overview Pages
 					%h3
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
+						Because the company has so much to offer, we designed a system of sub pages, created to display a wide range of information.
 			.col-md-2
 		.row
 			.col-md-12
@@ -81,6 +81,6 @@
 					%h2
 						Cutting Edge Technology
 					%p.double-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
-					%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"#work"}
+						We needed to build a site that was as tech savvy as the company itself. The site boasts a wide array of widgets and product highlighting functionality. By the final day of development, we felt we had delivered a site that was true to the Chronotrack brand.
+					%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"https://www.chronotrack.com/"}
 						View The Site
