--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,11 +19,11 @@
 		.row
 			.col-md-8.col-sm-8
 				%h1.text-uppercase
-					Strikingly 
-					%span{:style=>"color:#fcc563;"}
-						Different
+					Design
+					%br 
+					Is more than
 					%br
-					From the Rest
+					pretty pixels
 				%h3.double-margin-bottom
 					Welcome to the design portfolio of Alex Lauderdale.
 					%br 
