--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -7,7 +7,7 @@
 				%h1
 					Me
 				%h3.double-margin-bottom
-					I live in colorfull Colorado & I love to make beautiful things. I've been designing and building the web full time for 
+					I live in colorfull Colorado & I live and breathe design. I've been designing and building the web full time for 
 					%strong
 						4 years.
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"makeena.html"}
@@ -21,7 +21,7 @@
 					%h2
 						I Solve Products
 					%h3.triple-margin-bottom.no-margin-bottom
-						While I love making things look nice, I also like making them work. I believe in a systematic design approach. Your product deserves more than a pretty face. Let's build a something with rhyme and reason.  
+						Good design is systematic. Your product deserves more than a pretty face. Let's build something with rhyme and reason.  
 			.col-md-2
 		.row
 			.col-md-12
