--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -11,7 +11,7 @@
 					%strong
 						4 years.
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"makeena.html"}
-					See One of My Favorite Projects
+					View a Project
 %section
 	.container
 		.row
