--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -25,11 +25,9 @@
 					%br
 					pretty pixels
 				%h3.double-margin-bottom
-					Welcome to the design portfolio of Alex Lauderdale.
-					%br 
-					I offer web development & design services.
+					It is an exciting approach to solving problems. Let's have some fun solving yours. 
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"#work"}
-					See The Work
+					See the Work
 			.col-md-4.col-sm-4
 				%img.max-width{:src=>"images/wire.png"}
 %section
@@ -39,32 +37,36 @@
 			.col-md-10.col-sm-10
 				.text-center
 					%h2
-						Dream to build a better web.
-					%h3
-						I love the internet! I specialize in web and mobile design. If you need, I can build things to. 
+						Let's build a better web. I am proud to offer a full spectrum of design solutions. 
 			.col-md-1.col-sm-1
 		.row
-			.col-md-4.col-sm-4
-				.padded
-					%img.double-margin-bottom.home-icon{:src=>"images/design_icon.png"}
-						%h4
-							Branding
-						%p
-							Behing every brand is a story to tell. What's yours? I look forward to helping you bring your brand to life. 
 			.col-md-4.col-sm-4
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/ux_icon.png"}
 						%h4
 							UX
 						%p
-							With 4 years of real world UX expierence, I have solved a lot. Let's make your idea shine as simply and beautifully as possible. 
+							A good user interface should not only be functional, but pleasant to. Let's raise the bar and create a better experience.
+						%a.arrow{:href=>"wli.html"}
+							View something I made better
+			.col-md-4.col-sm-4
+				.padded
+					%img.double-margin-bottom.home-icon{:src=>"images/design_icon.png"}
+						%h4
+							Product Design
+						%p
+							Did I mention design solves problems? Let's asses your needs, explore a strategy and create something beautiful. 
+						%a.arrow{:href=>"makeena.html"}
+							See a problem I solved beautifully 
 			.col-md-4.col-sm-4
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/dev_icon.png"}
 						%h4
 							Develop
 						%p
-							My skills don't end in photoshop. I can build your website and custom fit it with a CMS designed specifically for your needs.
+							Once you problem is solved, let's implement it. At this point, bringing your idea to life is all about nailing the details, however large or small.
+						%a.arrow{:href=>"ucps.html"}
+							Explore something I've built 
 #work
 	= partial "layouts/work_menu"
 = partial "layouts/dribbble"
