--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -93,7 +93,7 @@
 $primary-color: #2eb350;
 $light-gray-color: #f0f1ed;
 $gray-color:#dddddd;
-$text-color: #646464;
+$text-color: #4a4a4a;
 $dark-text-color: #4a4a4a;
 $black-color:#111111;
 
@@ -150,7 +150,7 @@ h1,h2,h3,h4{
   font-family:$extra-bold-font-name;
 }
 h2{
-  font-family:$regular-font-name;
+  font-family:$light-font-name;
 }
 h3{
   font-family:$regular-font-name;
@@ -159,10 +159,10 @@ h5,h6{
   font-family:$medium-font-name;
 }
 
-p  {font-size: 1em; line-height:$baseline*1.1;}
+p  {font-size: 1.2em; line-height:$baseline*1.1;}
 h1 { font-size: 5.5em; line-height:$baseline*3.5;}
-h2 { font-size: 2.5em; line-height:$baseline*1.5;}
-h3 { font-size: 1.5em; line-height:$baseline*1.2;}
+h2 { font-size: 2.5em; line-height:$baseline*1.6;}
+h3 { font-size: 1.6em; line-height:$baseline*1.3;}
 h4 { font-size: 1.4em; line-height:$baseline;}
 h5 { font-size: 1em; line-height:$baseline;}
 h6 { font-size: 0.9em; line-height:$baseline;}
@@ -497,6 +497,19 @@ a{
   color:$primary-color;
   &:hover{
     text-decoration:none;
+    color:shade($primary-color,50%);
+  }
+  &.arrow{
+    font-size:1.2em;
+    font-family:$bold-font-name;
+    @include transition-duration(.3s);
+    background-image:url(../images/small_arrow.png);
+    background-repeat:no-repeat;
+    background-position:right 8px;
+    padding-right:30px;
+    &:hover{
+      padding-right:40px;
+    }
   }
 }
 
@@ -764,4 +777,17 @@ footer{
   }
 
 
+}
+
+@media (max-width: 320px) {
+  .btn{
+    width: 100%;
+  }
+  footer{
+    p{
+      display:inline-block;
+      width: 100%;
+      text-align:center!important;
+    }
+  }
 }
