--- a/source/chronotrack.html.haml
+++ b/source/chronotrack.html.haml
@@ -84,3 +84,4 @@
 						We needed to build a site that was as tech savvy as the company itself. The site boasts a wide array of widgets and product highlighting functionality. By the final day of development, we felt we had delivered a site that was true to the Chronotrack brand.
 					%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"https://www.chronotrack.com/"}
 						View The Site
+= partial "layouts/work_slider"
