--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -42,9 +42,9 @@
 		.row
 			.col-md-4.col-sm-4
 				.padded
-					%img.double-margin-bottom.home-icon{:src=>"images/ux_icon.png"}
+					%img.double-margin-bottom.home-icon{:src=>"images/dev_icon.png"}
 						%h4
-							UX
+							Web Design & UX
 						%p
 							A good user interface should not only be functional, but pleasant to. Let's raise the bar and create a better experience.
 						%a.arrow{:href=>"wli.html"}
@@ -53,20 +53,20 @@
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/design_icon.png"}
 						%h4
-							Product Design
+							Product Design & Branding
 						%p
 							Did I mention design solves problems? Let's asses your needs, explore a strategy and create something beautiful. 
 						%a.arrow{:href=>"makeena.html"}
-							See a problem I solved beautifully 
+							See a design solution
 			.col-md-4.col-sm-4
 				.padded
-					%img.double-margin-bottom.home-icon{:src=>"images/dev_icon.png"}
+					%img.double-margin-bottom.home-icon{:src=>"images/ux_icon.png"}
 						%h4
-							Develop
+							Development & CMS
 						%p
-							Once you problem is solved, let's implement it. At this point, bringing your idea to life is all about nailing the details, however large or small.
+							Once you problem is solved, let's implement it. Bringing your idea to life is all about nailing the details, however large or small.
 						%a.arrow{:href=>"ucps.html"}
-							Explore something I've built 
+							Explore something I built 
 #work
 	= partial "layouts/work_menu"
 = partial "layouts/dribbble"
