--- a/source/menu/_makeena.html.haml
+++ b/source/menu/_makeena.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section{:style=>"background-color:#ef7738;"}
+%section.invert-section.work-menu-item{:style=>"background-color:#ef7738;"}
 	.container
 		.row
 			.col-md-2
