--- a/source/menu/_mianzi.html.haml
+++ b/source/menu/_mianzi.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section{:style=>"background: url(images/mianzi_bg.jpg)#bd5327 0 -287px;"}
+%section.invert-section.work-menu-item{:style=>"background: url(images/mianzi_bg.jpg)#bd5327 0 -287px;"}
 	.container
 		.row
 			.col-md-2
