--- a/source/menu/_outflow.html.haml
+++ b/source/menu/_outflow.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section{:style=>"background-color:#f33a2c;"}
+%section.invert-section.work-menu-item{:style=>"background-color:#f33a2c;"}
 	.container
 		.row
 			.col-md-2
