--- a/source/menu/_ucps.html.haml
+++ b/source/menu/_ucps.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section{:style=>"background: url(images/ucps_ipad.png) no-repeat center bottom #0055a5"}
+%section.invert-section.work-menu-item{:style=>"background: url(images/ucps_ipad.png) no-repeat center bottom #0055a5"}
 	.container
 		.row
 			.col-md-2
