--- a/source/menu/_wli.html.haml
+++ b/source/menu/_wli.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section.no-padding-bottom{:style=>"background-color:#cbb778;"}
+%section.invert-section.no-padding-bottom.work-menu-item{:style=>"background-color:#cbb778;"}
 	.container
 		.row
 			.col-md-2
