--- a/source/ucps.html.haml
+++ b/source/ucps.html.haml
@@ -114,3 +114,4 @@
 				%img.full-width{:src=>"images/ucps_ipad_full.jpg"}
 				%blockquote.text-center{style:"color:#0055a5;"}
 					"We love it!"
+= partial "layouts/work_slider"
