--- a/source/menu/_logos.html.haml
+++ b/source/menu/_logos.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section{:style=>"background:#3b3e47 url(images/logo_teaser.png) no-repeat 780px -160px"}
+%section.invert-section.work-menu-item{:style=>"background:#3b3e47 url(images/logo_teaser.png) no-repeat 780px -160px"}
 	.container
 		.row
 			.col-md-2
