--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -64,7 +64,7 @@
 						%h4
 							Development & CMS
 						%p
-							Once you problem is solved, let's implement it. Bringing your idea to life is all about nailing the details, however large or small.
+							Once your problem is solved, let's implement it. Bringing an idea to life is all about nailing the details, however large or small.
 						%a.arrow{:href=>"ucps.html"}
 							Explore something I built 
 #work
