--- a/source/mianzi.html.haml
+++ b/source/mianzi.html.haml
@@ -10,16 +10,16 @@
 							Designing the face of a bike company
 						.divider
 		.row
-			.col-md-8.col-sm-8
+			.col-md-6.col-sm-6
 				%h4
 					About the project
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
-			.col-md-4.col-sm-4
+					Mianzi started as a bamboo bike company focused on clean production of their products. As they evolved, they moved toward production of sustainable bike frames at an affordable price. They required a new face for their company. This project has a special place in my heart, as it required a lot of effort to get the logo just right. 
+			.col-md-6.col-sm-6
 				%h4
-					Our role
+					My role
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+					The word mianzi translates to “face” and “bamboo”. I was tasked with designing a mark that communicated the name of the company as it related to their mission.
 %section.invert-section{:style=>"background-color:#2c383e;"}
 	.container
 		.row
@@ -29,7 +29,7 @@
 					%h2
 						Narrowing it down
 					%h3
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+						Working closely together. We reviewed many initial options. Finding the right balance of community, humanity and great products was curtail.
 			.col-md-2
 		.row
 			.col-md-1
@@ -45,7 +45,7 @@
 					%h2
 						The Solution
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam.
+						We arrived at a mark that communicated unity and strength through recognizable cycling imagery.
 			.col-md-2
 		.row
 			.col-md-3
@@ -61,7 +61,7 @@
 					%h2
 						One for three.
 					%p
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
+						Along with unity, we wanted to communicate the company’s promise to donate one bike to charity for every three sold. This was particularly challenging. Both mianzi and I felt great about where we landed. 
 			.col-md-8
 %section.invert-section{:style=>"background: url(images/mianzi_bg.jpg)#bd5327 center top no-repeat;"}
 	.container
