--- a/source/outflow.html.haml
+++ b/source/outflow.html.haml
@@ -15,27 +15,19 @@
 							.col-md-1
 						.divider
 		.row
-			.col-md-8.col-sm-8
+			.col-md-6.col-sm-6
 				%h4
 					About the project
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
-			.col-md-4.col-sm-4
+					Outflow offers leadership development services to urban organizations in need. They are a forward thinking organization with loads of passion an optimism. They aim to connect people in cities through positivity and group effort. Their soul mission is to define the need for leadership, provide meaningful connection. 
+			.col-md-6.col-sm-6
 				%h4
-					Our Role
+					My Role
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+					Outflow hired me to help define their voice and develop their website. They required a simple website design that allowed them to voice their mission and collect donations from people passionate about the cause. 
+
 %section
 	.container
-		.row
-			.col-md-2
-			.col-md-8
-				.text-center
-					%h2
-						Outflow
-					%h3.double-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
-			.col-md-2
 		.row
 			.col-md-1
 			.col-md-10
@@ -50,7 +42,7 @@
 					%h2
 						Long Term Solutions
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+						We designed the site to be simple. We wanted users to quickly connect with the story of the Outflow. The site was custom fit with a CMS so they could update content as their mission evolved.
 			.col-md-2
 		.row
 			.col-md-1
@@ -66,7 +58,7 @@
 					%h2
 						Giving Back
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+						We built in a donation platform, allowing users to easily give to the organization. The site was optimized for all device sizes.
 					%a.btn.btn-xl.btn-default.triple-margin-bottom{:target=>"blank",:href=>"http://www.outflow.org", :style=>"border-color:#f33a2c; color:#f33a2c;"}
 						View the site
 			.col-md-2
