--- a/source/ucps.html.haml
+++ b/source/ucps.html.haml
@@ -15,16 +15,16 @@
 							.col-lg-2
 						.divider
 		.row
-			.col-md-8.col-sm-8
+			.col-md-6.col-sm-6
 				%h4
 					About the project
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
-			.col-md-4.col-sm-4
+					I was hired by Union Colony Preparatory School to completely re-imagine their website. Their existing site had been outdated for some time, and they were seeking a fresh perspective on their web presence.  
+			.col-md-6.col-sm-6
 				%h4
-					Our Role
+					My Role
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+					I worked with UCPS to build a systematic web design approach aimed to best serve the students and parents. I delivered a fresh website with an emphasis on content and school info. 
 %section
 	.container
 		.row
@@ -34,7 +34,7 @@
 					%h2
 						The Road Less Traveled
 					%h3
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
+						The school had recently opened  a new location to support more students. We designed  the site to allow easy access to both schools, with a simple sidebar navigation to support links to individual school areas. This way each school had their own presence encompassed by an overall feeling of unity with the organizations brand and mission.
 			.col-md-2
 		.row
 			.col-md-4
@@ -51,8 +51,8 @@
 					%h2
 						Long Term Solutions.
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
-					%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"#work"}
+						We fitted the new site with a custom Wordpress backend, allowing admins and teachers to easily update the content on the site. Including events, teacher bios and news
+					%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"http://www.unioncolonyschools.org/"}
 						View the Site
 			.col-md-2
 		.row
