--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -37,7 +37,7 @@
 			.col-md-10.col-sm-10
 				.text-center
 					%h2
-						Let's build a better web. I am proud to offer a full spectrum of design solutions. 
+						Let's build a better web together. I am proud to offer a full spectrum of design solutions. 
 			.col-md-1.col-sm-1
 		.row
 			.col-md-4.col-sm-4
