--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,9 +23,11 @@
 					%br 
 					Is more than
 					%br
-					pretty pixels
+					Pushing Pixels
 				%h3.double-margin-bottom
-					It is an exciting approach to solving problems. Let's have some fun solving yours. 
+					It is an exciting approach to solving problems. 
+					%br
+					Let's have some fun solving yours. 
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"#work"}
 					See the Work
 			.col-md-4.col-sm-4
