--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -17,6 +17,8 @@
             %li
               %a#menu-button{:href=>"javaScript:void(0);"}
                 %i.icon-reorder.primary-text-color
+                %span.menu-title
+                  MENU
     = partial "layouts/main_menu"
     .main-contents
       = yield
