--- a/source/logos.html.haml
+++ b/source/logos.html.haml
@@ -9,12 +9,12 @@
 						%h3
 							Select logos from past clients
 						.divider
-		.row
-			.col-md-12.col-sm-12
-				%h4
-					About the logos
-				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
+		/ .row
+		/ 	.col-md-12.col-sm-12
+		/ 		%h4
+		/ 			About the logos
+		/ 		%p
+		/ 			Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
 %section
 	.container
 		.row
@@ -22,7 +22,7 @@
 				%h4.text-uppercase
 					Deyrd
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					Logo design for a promising wireless headphone company. The logo was developed to be sleek & modern.
 				%img.max-width.double-margin-bottom{:src=>"images/color_deyrd.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -34,7 +34,7 @@
 				%h4.text-uppercase
 					Grade a cafe
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					Part of a brand overhaul, the grade a cafe logo was designed to be a playfull expression of a coffee shop located at Colorado State University.
 				%img.max-width.double-margin-bottom{:src=>"images/color_gradea.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -46,7 +46,7 @@
 				%h4.text-uppercase
 					Trichome
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					Designed for a local band. The Trichome logo radiates high energy dance vibrations. 
 				%img.max-width.double-margin-bottom{:src=>"images/color_trichome.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -58,7 +58,7 @@
 				%h4.text-uppercase
 					Makeena
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					The makeena logo is an illustration of the companies promise to connect brands and shoppers.
 				%img.max-width.double-margin-bottom{:src=>"images/color_makeena.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -70,7 +70,7 @@
 				%h4.text-uppercase
 					HOMELESSNESS PREVENTION INITIATIVE
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					Focused on Security & protection, the HPI logo was developed to encompass all the passion of this non-profit orginization.
 				%img.max-width.double-margin-bottom{:src=>"images/color_hpi.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -82,7 +82,7 @@
 				%h4.text-uppercase
 					JODI HYNDS PHOTOGRAPHY
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					Designed to be approachable and inviting. This mark was developed to reflect the signature of this local photographer.
 				%img.max-width.double-margin-bottom{:src=>"images/color_jodu.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -94,7 +94,7 @@
 				%h4.text-uppercase
 					Mianzi
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					A logo designed to illustrate the mission of this humanistic bike company. 
 				%img.max-width.double-margin-bottom{:src=>"images/color_mianzi.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -106,7 +106,7 @@
 				%h4.text-uppercase
 					NORTHERN COLORADO ALLERGY & ASTHMA CLINIC
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+					Developed to convey a whimsical feeling of relief associated with the care provided by this medical association. 
 				%img.max-width.double-margin-bottom{:src=>"images/color_ncaac.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
