--- a/source/ucps.html.haml
+++ b/source/ucps.html.haml
@@ -34,7 +34,7 @@
 					%h2
 						The Road Less Traveled
 					%h3
-						The school had recently opened  a new location to support more students. We designed  the site to allow easy access to both schools, with a simple sidebar navigation to support links to individual school areas. This way each school had their own presence encompassed by an overall feeling of unity with the organizations brand and mission.
+						The school recently opened  a new location to support more students. We designed  the site to allow easy access to both schools, with simple sidebar navigation to support links to individual schools. Each school had their own presence, encompassed by unity with the school's mission.
 			.col-md-2
 		.row
 			.col-md-4
@@ -51,7 +51,7 @@
 					%h2
 						Long Term Solutions.
 					%h3.triple-margin-bottom
-						We fitted the new site with a custom Wordpress backend, allowing admins and teachers to easily update the content on the site. Including events, teacher bios and news
+						We fitted the new site with a custom Wordpress backend, allowing admins and teachers to easily update content on the site. Including events, teacher bios and news.
 					%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"http://www.unioncolonyschools.org/"}
 						View the Site
 			.col-md-2
@@ -77,16 +77,16 @@
 								%h3
 									Custom CMS
 								%p
-									Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+									We fitted the new site with a custom Wordpress backend, allowing admins and teachers to easily update the content on the site. Including events, teacher bios and news.
 					.col-md-6.col-sm-6
 						.row.margin-bottom
 							.col-md-3.col-sm-3
 								%img.max-width.margin-bottom{:src=>"images/ucps_paper.jpg"}
 							.col-md-9.col-sm-9
 								%h3
-									Custom CMS
+									Event Manager
 								%p
-									Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+									We developed a custom event management system so parents and students could stay up to date with school functions and sporting events.
 				.row
 					.col-md-6.col-sm-6
 						.row
@@ -94,18 +94,18 @@
 								%img.max-width.margin-bottom{:src=>"images/ucps_clock.jpg"}
 							.col-md-9.col-sm-9
 								%h3
-									Custom CMS
+									Teacher Bios
 								%p
-									Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+									Every teacher was given their own bio page complete with ability to post assignments and accept feedback.
 					.col-md-6.col-sm-6
 						.row
 							.col-md-3.col-sm-3
 								%img.max-width.margin-bottom{:src=>"images/ucps_cloud.jpg"}
 							.col-md-9.col-sm-9
 								%h3
-									Custom CMS
+									Featured Content
 								%p
-									Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+									We developed a featured content slider, so that the school can easily display updates and important alerts.
 			.col-md-2
 %section.no-padding-top
 	.container
