--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -98,13 +98,13 @@
       .col-lg-6
         %ul.inline.text-center.no-padding-left.double-margin-bottom.social-menu
           %li.text-center
-            %a{:href=>"#"} 
+            %a{:href=>"http://www.dribbble.com/alauderdale10"} 
               %i.icon-dribbble
           %li.text-center
-            %a{:href=>"#"} 
+            %a{:href=>"http://www.twitter.com/alauderdale10"} 
               %i.icon-twitter
           %li.text-center
-            %a{:href=>"#"} 
+            %a{:href=>"http://www.github.com/alauderdale"} 
               %i.icon-github
       .col-lg-3
 
