--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -159,7 +159,7 @@ h5,h6{
   font-family:$medium-font-name;
 }
 
-p  {font-size: 1em; line-height:$baseline*1.2;}
+p  {font-size: 1.2em; line-height:$baseline*1.2; color:#888888;}
 h1 { font-size: 5.5em; line-height:$baseline*3.5;}
 h2 { font-size: 2.5em; line-height:$baseline*1.8;}
 h3 { font-size: 1.6em; line-height:$baseline*1.3;}
@@ -550,7 +550,11 @@ a.logo{
   background-size:100%;
 }
 
-
+.menu-title{
+  color:$primary-color;
+  font-family:$bold-font-name;
+  margin-left:$baseline/4;
+}
 
 //drop-menu
 
@@ -786,7 +790,7 @@ footer{
     font-size:3em;
     line-height:$baseline*2;
   }
-
+  .menu-title{display:none;}
 
   nav.menu-drop{
     section{
