--- a/source/makeena.html.haml
+++ b/source/makeena.html.haml
@@ -9,10 +9,8 @@
 						%h3
 							Connecting brands and shoppers
 						.row
-							.col-lg-2
-							.col-lg-8
-								%img.max-width.no-margin-bottom.margin-top{:src=>"images/makeena_phone.png"}
-							.col-lg-2
+							.col-lg-12
+								%img.max-width.no-margin-bottom.margin-top{:src=>"images/makeena_app_2.png"}
 						.divider
 		.row
 			.col-md-6.col-sm-6
