--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -14,7 +14,8 @@
 		});
 	});
 
-%section.primary-bg.invert-section
+
+%section.section.primary-bg.invert-section#home-hero{:'data-speed' => "2", :'data-type' => "background"}
 	.container
 		.row
 			.col-md-8.col-sm-8
@@ -39,7 +40,7 @@
 			.col-md-10.col-sm-10
 				.text-center
 					%h2
-						Let's build a better web together. I am proud to offer a full spectrum of design solutions. 
+						I am proud to offer a full spectrum of design solutions. 
 			.col-md-1.col-sm-1
 		.row
 			.col-md-4.col-sm-4
@@ -48,7 +49,7 @@
 						%h4
 							Web Design & UX
 						%p
-							A good user interface should not only be functional, but pleasant to. Let's raise the bar and create a better experience.
+							A good user interface should be not only functional, but pleasant to. Let's raise the bar and create a better experience.
 						%a.arrow{:href=>"wli.html"}
 							View something I made better
 			.col-md-4.col-sm-4
@@ -66,7 +67,7 @@
 						%h4
 							Development & CMS
 						%p
-							Once your problem is solved, let's implement it. Bringing an idea to life is all about nailing the details, however large or small.
+							Once your problem is solved, let's implement it. Bringing an idea to life is all about nailing the details, large or small.
 						%a.arrow{:href=>"ucps.html"}
 							Explore something I built 
 #work
