--- a/source/logos.html.haml
+++ b/source/logos.html.haml
@@ -59,6 +59,8 @@
 					Makeena
 				%p
 					The makeena logo is an illustration of the companies promise to connect brands and shoppers.
+					%a{:href=>"makeena.html"}
+						See more work form makeena
 				%img.max-width.double-margin-bottom{:src=>"images/color_makeena.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
@@ -95,6 +97,8 @@
 					Mianzi
 				%p
 					A logo designed to illustrate the mission of this humanistic bike company. 
+					%a{:href=>"mianzi.html"}
+						See more work form mianzi
 				%img.max-width.double-margin-bottom{:src=>"images/color_mianzi.png"}
 			.col-md-2.col-sm-2
 			.col-md-6.col-sm-6
