--- a/source/makeena.html.haml
+++ b/source/makeena.html.haml
@@ -22,7 +22,7 @@
 				%h4
 					My Role
 				%p
-					Starting with the logo, we worked to build a playful brand extending beyond the itunes store. After bringing the brand to life, I lead the app design effort, thinking through UI problems and design challenges. 
+					Starting with the logo, we worked to build a playful brand, extending beyond the itunes store. After bringing the brand to life, I lead the app design effort, thinking through UI problems and design challenges. 
 %section.no-padding-bottom
 	.container
 		.row
@@ -89,7 +89,7 @@
 					%h2
 						The App
 					%h3
-						The app was designed to be approachable and fun, appealing to all age groups. We kept the design light, so the brands could shine. Never to be overwhelmed by the brand of makeena itself.
+						The app was designed to be approachable and fun, appealing to all age groups. We kept the design light, so the products could shine. Never to be overwhelmed by the brand of makeena itself.
 			.col-md-2
 		.row
 			.col-md-12
