--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -5,9 +5,10 @@
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
     %title= data.page.title || "Eternal Contrast"
-    = stylesheet_link_tag "bootstrap", "font-awesome" ,"style"
+    = stylesheet_link_tag "bootstrap", "font-awesome" ,"style","pace"
     %script{:src => "http://code.jquery.com/jquery-latest.min.js", :type => "text/javascript"}
-    = javascript_include_tag "bootstrap", "scripts"
+    = javascript_include_tag "bootstrap","pace", "scripts"
+    %link{href: "images/favicon.ico", rel: "shortcut icon"}/
   %body{:class => page_classes}
     %nav.navbar.navbar-default.navbar-fixed-top{role: "navigation"}
       .container
