--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -51,7 +51,7 @@
 						%p
 							A good user interface should be not only functional, but pleasant to. Let's raise the bar and create a better experience.
 						%a.arrow{:href=>"wli.html"}
-							View something I made better
+							View something I improved
 			.col-md-4.col-sm-4
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/design_icon.png"}
