--- a/source/makeena.html.haml
+++ b/source/makeena.html.haml
@@ -17,7 +17,7 @@
 				%h4
 					About the Project
 				%p
-					makkena is an application designed to connect shoppers and brands. With location based services, the app allows shoppers to quickly find coupons wherever they are.
+					makeena is an application designed to connect shoppers and brands. With location based services, the app allows shoppers to quickly find coupons wherever they are.
 			.col-md-6.col-sm-6
 				%h4
 					My Role
